--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav li {
   list-style: none;
 }
 
-/*para centralizar a página*/
+/*para centralizar a pagina*/
 .central{max-width: 50%;margin: auto}
 
 nav ul {margin: 0px;padding: 0px;}
