--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
   color: blue;
 }
 
-body {font-family:Verdana, Geneva, Tahoma, sans-serif;background-color: silver;}
+body {font-family:Verdana, Geneva, Tahoma, sans-serif;background-color:rgb(173, 216, 230,0.75);}
 /*para colocar imagem de background em loop com repeat*/
 /*não consegui botar pra grayscale*/
-html {background-image: url(mosaic.png); background-repeat:repeat; background-size: 50%;filter:grayscale(100%)}
+html {background-image: url(mosaic.png); background-repeat:repeat; background-size: 50%;}
 
 h1 {text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 h2 {color:maroon;font-weight:bold; font-family: 'Courier New', Courier, monospace;}
