--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {font-family:Verdana, Geneva, Tahoma, sans-serif;background-color:rgb(173, 216, 230,0.75);}
 /*para colocar imagem de background em loop com repeat*/
 /*não consegui botar pra grayscale*/
-html {background-image: url(mosaic.png); background-repeat:repeat; background-size: 50%;}
+html {background-image: url(mosaic.png); background-repeat:round; background-size: 50%;}
 
 h1 {text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 h2 {color:maroon;font-weight:bold; font-family: 'Courier New', Courier, monospace;}
@@ -32,3 +32,7 @@ nav ul {margin: 0px;padding: 0px;}
 
 img {display: block;margin: auto;width: 50%;width:100px; height:200px}
 
+video {
+display:inline
+
+}
