--- a/style2.css
+++ b/style2.css
@@ -20,3 +20,8 @@ form{text-align: center; color: aquamarine; font-family:'Gill Sans', 'Gill Sans 
 
 label {display: block;}
 .hor label{display:inline}
+
+table * {text-align: center;}
+table {border-collapse: collapse;margin:auto;}
+td, th {border: 1px solid; background-color: khaki; padding: 10px;}
+nav a .hover{background-color: khaki;}
