--- a/index6.css
+++ b/index6.css
@@ -5,16 +5,16 @@ div {display: inline-block}
 body {border: 5px solid red; width: 50%; max-width: width 80%;min-width: 20%;}
 html {border: 5px solid blue}
 
-nav ul {style="list-style: none; margin-left:0; padding-left: 0;"}
+nav ul {list-style: none; margin-left:0; padding-left: 0;}
 
 #header {right: 0px; top: 0px;position:absolute;
-height: 200px; background: url(mosaic.png) no-repeat 20px; background-color: rosybrown ; border: 1px solid royalblue;}
+height: 200px; background-image: url(mosaic.png) no-repeat 20px; background-color: rosybrown ; border: 1px solid royalblue;}
 
 #section {overflow: scroll}
 
 #aside {top:50%; }
 
-#footer {}
+#footer {background-image: url(mosaic.png);}
 
 .robohash {text-align: center;width: 300px;max-width: 600px;}
 
